--- a/wwwroot/styles.css
+++ b/wwwroot/styles.css
@@ -1,98 +1,105 @@
-html body{
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    font-size: 16px;
-    background-color: cornflowerblue;
+html, body {
     overflow: hidden;
 }
 
-/*html {*/
-/*    height: 100%;*/
-/*    width: 100%;*/
-/*    overflow: hidden;*/
-/*}*/
-
-/*body {*/
-/*    overflow: hidden;*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    height: 100%;*/
-/*    width: 100%;*/
-/*    font-family: Arial, Helvetica, sans-serif, Tahoma, Verdana, sans-serif;*/
-/*    font-size: 12px;*/
-/*    background: rgb(14, 98, 165);*/
-/*    color: white;*/
-/*}*/
-
-
-#sidePanel {
-    display: inline-block;
-    background-color: lightpink;
-    height: 100%;
-    position: absolute;
-    width: 280px;
-}
-
-#code {
-    left: 280px;
+.navbar {
+    background-color: gray;
+    /*padding: 10px 20px;*/
     width: 100%;
-    height: 100%;
+    height: 25px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    text-align: center;
 }
 
-#sidePanel #option {
-    display: inline-block;
-    background-color: lightpink;
+#result {
+    border: 1px solid gray;
+    background-color: #ffffe0;
+    border-radius: 5px;
+}
+
+.container {
+    display: flex;
+    height: 100vh;
+    background-color: white;
+}
+
+.left {
+    background-color: lightpink; /* 左半部分的颜色 */
+    width: 25%;
+    height: 100%;
+    /*position: fixed;*/
+    /*position: absolute;*/
+    /*display: flex;*/
+    border-radius: 10px;
+}
+
+.toggle {
     width: 100%;
-    height: 100%;
 }
 
-#controls {
-    padding: 5px;
+.toggle p {
+    text-align: center;
+    margin: 0 auto;
 }
 
-#controls td {
+.option {
+    width: 100%;
+    height: 70%;
+}
+
+#control {
+    padding: 10px;
+}
+
+#control td {
     text-align: right;
 }
 
-#controls td + td {
+#control td + td {
     text-align: left;
 }
 
-#sidePanel .optionTable {
-    /*width: 100%;*/
-}
-
-#sidePanel *:focus {
-    outline: 3px solid lightpink;
-}
-
-#sidePanel *:hover {
-    outline: 3px solid orange;
-}
-
-.toggleButton {
-    display: inline-block;
+.centered-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px 20px;
+    background-color: dodgerblue;
+    color: white;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
-    position: absolute;
 }
 
-/*.toggleButton.hidden {*/
-/*    transform: translateX(-100%);*/
-/*}*/
-
-.toggleButton>div {
-    width: 15px;
-    height: 2px;
-    margin: 3px 2px;
-    background-color: white;
-    pointer-events: none;
-    transition: 0.5s;
+.centered-button:hover {
+    background-color: #007BFF;
 }
 
-/*#sidePanel:not(.closed) .toggleButton >div:nth-child(1) {transform: translate(0px, 5px) rotate(-45deg)}*/
-/*#sidePanel:not(.closed) .toggleButton >div:nth-child(2) {opacity: 0}*/
-/*#sidePanel:not(.closed) .toggleButton >div:nth-child(3) {transform: translate(0px, -5px) rotate(45deg)}*/
-/*#sidePanel.closed>*:not(.toggleButton) {display: none}*/
+
+.centered-button img {
+    margin-right: 5px;
+}
+
+.right-section {
+    background-color: #b0c4de; /* 右半部分的颜色 */
+    width: 100%;
+    height: 100%;
+    margin-left: 5px;
+    /*display: flex;*/
+    border-radius: 10px;
+}
+#top-section {
+    /*background-color: lightcyan;*/
+    width: 100%;
+    height: 70%;
+    border-radius: 10px;
+}
+
+#bottom-section {
+    background-color: #ffa07a; /* 新的div的颜色 */
+    margin-top: 5px;
+    width: 100%;
+    height: 30%; /* 高度为容器的一半 */
+    border-radius: 10px;
+}
